Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -176,7 +176,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 .widget.extendednavigation {
     float: right;
     position: relative;
-    max-width: 700px;
+    width: 70%;
     margin: 5px 0;
 }
 
@@ -185,7 +185,6 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 }
 
 .widget.extendednavigation ul {
-    float: left;
     margin: 0;
     padding: 0;
 }
